--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,8 @@
         <version>1.0.0</version>
     </parent>
 
-    <groupId>xyz.luan</groupId>
     <artifactId>http-facade</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
