--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-.idea/
+**.classpath
+**.project
+*.settings/org.eclipse.jdt.core.prefs
+*/target
 target/
-*.iml
+.metadata/*
+.metadata/
+RemoteSystemsTempFiles/*
+RemoteSystemsTempFiles/
+*~
+**.idea*
+**.iml
+*.ipr
+*.iws
+.DS_Store/*
+.DS_Store/
+.settings/
